deploy/ld_server_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ld-server
  annotations:
    FrontConfig: "frontend-config"
    kubernetes.io/ingress.global-static-ip-name: finngen-api
    networking.gke.io/managed-certificates: certificate-api-finngen-fi
    kubernetes.io/tls-acme: "true"
  labels:
    app: ld-server
spec:
  rules:
  - host: api.finngen.fi
    http:
      paths:
      - backend:
          service:
            name: ld-server
            port:
              number: 80
        pathType: Prefix
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: ld-server
  labels:
    app: ld-server
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ld-server
    tier: web
